fix remote-support.html responsive on mobile

--- a/style.css
+++ b/style.css
@@ -3340,6 +3340,9 @@ ul.nav li:hover > ul.dropdown-menu {
         width: 150px;
         height: 150px;
     }
+    #Home.remote_support_banner .home_right_img img{
+        right: 0;
+    }
 }
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
     #header{
